assets/css/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'butterfly kids', cursive;
  } 
body {
    height: 100vh;
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/main_background.webp);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    flex-direction: column;
  }  
#logo-image {
    width: 80px;
    height: 80px;
    top: 50px;
    left: 0px;
    align-self: center;
  }
h1 {
    font-family: 'butterfly kids', cursive;
    font-size: 200%;
    font-weight: 600;
    color: #FFF;
    background-color: #000;
    height: fit-content;
    text-align: center;
    position: fixed;
    z-index: 100;
  }
button {
    border: none;
    outline: none;
    cursor: pointer;
    background-color: #707070;
    font-family: 'butterfly kids', cursive;
}
.welcome-screen,
.score-container
{
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
#begin-quiz-button,
#next-question-button,
#try-again-button,
#submit-spell-button
{
    font-size: 1.33em;
    padding: 0.5em 1.8em;
    border-radius: 0.2em;
    text-align: center;
}
#next-question-button{
  display: flex;
  width: 100%;
  justify-content: center;
}
#try-again-button {
  margin-top: 0.9em;
}
#quiz-container {
  height: 40rem;
  width: 50%;
  max-width: 80em;
  padding: 3.1rem 1.8rem;
  margin: 0 auto;
  border-radius: 0.6em;
  background-image: url(../images/quiz_background.webp);
  background-size: cover;
  background-color: lightgrey;
  background-position: center;
  background-repeat: no-repeat;
  position: absolute;
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
  z-index: 5;
  animation: fadeInAnimation ease 1s;
}
.quiz-header {
  margin-bottom: 1.8em;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 0.5em;
  border-bottom: 0.1em solid black;
  background-color: lightgrey;
}
.timer {
  background-color: lightgrey;
  width: 7.5em;
  border-radius: 1.8em;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0.7em 1.8em;
}
.question {
  text-align: center;
  text-decoration: solid;
  text-decoration-color: #FFF;
  font-size: 30px;
  width: 100%;
  margin-bottom: 20px;
}
.option-div {
  font-size: 0.9em;
  font-weight: bold;
  width: 100%;
  padding: 1em;
  margin: 0.3em 0;
  text-align: left;
  outline: none;
  background: rgba(255, 255, 255, 0.3);
  border: 1px solid white;
  border-radius: 0.3em;
}
.option-div:not(:disabled):hover {
  background: rgba(255, 255, 255, 0.6);
}
.option-div:disabled {
  color: black;
  cursor: not-allowed;
}
.incorrect {
  background-color: lightcoral;
  color: red;
  border-color: red;
}
.correct {
  background-color: lightgreen;
  color: green;
  border-color: green;
}
#your-score {
  font-size: 1.5em;
  color: white;
}
.submit-spell-form-container{
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  z-index: 5;
}
form {
  background-color: lightgrey;
  border-radius: 10px;
  opacity: 1;
  z-index: 5;
  color: white;
  width: 600px;
  height: 500px;
  display: flex;
  flex-direction: column;
  width: 90%;
  max-width: 700px;
}
form h2 {
  font-size: 30px;
  color: #707070;
  margin: 30px 20px 10px;
}
form input, form textarea {
  margin: 10px 20px;
  padding: 10px;
  border: 1px solid rgba(0, 0, 0, 0.734);
  border-radius: 5px;
  font-size: 16px;
}
textarea {
  height: 160px;
}
form button {
  padding: 10px;
  background-color: #707070;
  font-size: 20px;
  cursor: pointer;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 5px;
  margin: 10px 20px;
  padding: 10px;
  width: 200px;
  margin: 10px auto;
}
form button:hover {
  background: white;
  text-decoration: underline;
  transition: 0.2s ease-in-out;
}
#thankyou-background {
  height: 100vh;
  width: 100%;
  background-size: cover;
  min-height: 400px;
}
footer {
    width: 100%;
    height: 5%;
    position: absolute;
    bottom: 0;
    z-index: 2;
    background-color: rgba(255, 255, 255, 0.5); 
  }
.hide {
    display: none;
}
footer > p{
    left: 50px;
    text-align: center;
    text-decoration: solid;
    text-decoration-color: #fff;
}
/* main content */
main {
    background-color: lightgrey;
}
#game-rules {
  position: relative;
  z-index: 0;
  width: 500px;
  height: 450px;
  bottom: 40%;
  left: 0;
  justify-content: center;
  align-items: center;
  box-sizing:border-box;
  padding: 10px 10px 25px 20px;
  background-color: lightgrey;
  color: #29323b;
  text-align: start;
  font-family:'butterfly kids', cursive;
  border-radius: 4px;
  height: fit-content;
  width:fit-content;
}
#game-rules > h3 {
  margin-top: 50px;
}
.glow {
  font-size: 80px;
  color: #fff;
  text-align: center;
  animation: glow 1s ease-in-out infinite alternate;
}
@-webkit-keyframes fadeIn {
  from {opacity: 0;} 
  to {opacity: 1;}
}
@keyframes fadeIn {
  from {opacity: 0;}
  to {opacity:1 ;}
}
@keyframes glow {
  from {
    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #d4af37, 0 0 40px #d4af37, 0 0 50px #d4af37, 0 0 60px #d4af37, 0 0 70px #d4af37;
  }
  to {
    text-shadow: 0 0 20px #fff, 0 0 30px #FFD700, 0 0 40px #FFD700, 0 0 50px #FFD700, 0 0 60px #FFD700, 0 0 70px #FFD700, 0 0 80px #FFD700;
  }
}
@keyframes fadeInAnimation {
  0% {opacity: 0;}
  100% {opacity: 1;}
}
/* media query: for screens up to 768px */
@media (max-width: 768px) {
  #body {
      /* Change to contain for smaller screens */
      background-size: cover; 
  }
  #quiz-container{
    /* Change to contain for smaller screens */
    background-size: cover;
  }
  #logo-image {
    max-width: 70%;
    height: auto;
}
  #h1{
    font-size: 100%;
  }
}

@media (max-width: 768px) {
  .container {
      width: 95%;
      margin: 10px;
  }

  .header {
      flex-direction: column;
      text-align: center;
  }

  .number-of-question,
  .time-left {
      margin-bottom: 10px;
  }

  .question {
      font-size: 16px;
  }

  .option-div {
      font-size: 14px;
  }

  button {
      width: 100%;
      font-size: 14px;
  }

  #begin-quiz-button {
      padding: 15px 20px;
      font-size: 18px;
  }
}

@media (max-width: 480px) {
  .container {
      width: 100%;
      margin: 0;
      border-radius: 0;
  }

  .header {
      flex-direction: column;
  }

  .question {
      font-size: 14px;
  }

  .option-div {
      font-size: 12px;
      padding: 8px;
  }

  button {
      font-size: 12px;
  }

  #begin-quiz-button {
      padding: 20px 25px;
      font-size: 20px;
  }
}

.welcome-screen {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#game-rules {
  order: 1;
}

#begin-quiz-button,
#submit-spell-button {
  order: 2;
  margin-top: 10px;
}

/* media query: large or landscape phones (576px and up) */
@media screen and (min-width: 576px) {
  #body {
    /* Change to contain */
    background-size: cover; 
}
}
/* media query: large devices (laptops and desktops, 992px and up) */
@media screen and (min-width: 992px) {
  #body {
    /* Change to contain */
    background-size: cover; 
}
}
/* media query: large devices 1200px and up */
@media screen and (min-width: 1200px) {
  #body {
    /* Change to contain */
    background-size: cover; 
}
}

